--- a/package.json
+++ b/package.json
@@ -10,13 +10,21 @@
   },
   "dependencies": {
     "@apollo/client": "^3.9.5",
+    "@tsparticles/engine": "^3.2.2",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.2.2",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.6",
     "graphql": "^16.8.1",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-sticky": "^6.0.3"
+    "react-sticky": "^6.0.3",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
+    "@types/node": "20.11.20",
+    "@types/react": "18.2.58",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
