--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-sticky": "^6.0.3",
+    "sharp": "^0.33.3",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
