--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.2",
     "react-sticky": "^6.0.3",
     "sharp": "^0.33.3",
