--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "lucide-react": "^0.366.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.1.0",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.2",
     "react-sticky": "^6.0.3",
+    "react-toastify": "^10.0.5",
     "sharp": "^0.33.3",
     "tailwind-merge": "^2.2.2"
   },
