--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-intersection-observer": "^9.8.2",
     "react-sticky": "^6.0.3",
     "react-toastify": "^10.0.5",
+    "react-use-measure": "^2.1.1",
     "sharp": "^0.33.3",
     "tailwind-merge": "^2.2.2"
   },
