--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-infinite-logo-slider": "^1.0.13",
     "react-intersection-observer": "^9.8.2",
     "react-sticky": "^6.0.3",
     "react-toastify": "^10.0.5",
