--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-sticky": "^6.0.3",
     "react-toastify": "^10.0.5",
     "react-use-measure": "^2.1.1",
+    "resend": "^4.1.2",
     "sharp": "^0.33.3",
     "tailwind-merge": "^2.2.2"
   },
